--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,134 @@
-﻿html {
+﻿* {
+    margin: 0;
+    padding: 0;
+}
+html,
+body {
     min-height: 100%;
+    height: 100%;
     background-color: #f2f2f2;
 }
+.wrap {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+main {
+    /*padding-bottom: 100px;*/
+    margin-top: 15px;
+    flex: 1 0 auto;
+}
+
 .logo{
-    width: 240px;
-    position: absolute;
-    top:50%;
-    left:50%;
-    margin:-240px 0 0 -110px;
+    background: url(../images/admin/ff_logo.svg) no-repeat;
+    background-size: 100% 100%;
+    display: inline-block;
+    text-indent: -9999px;
+    width: 180px;
+    height: 46px;
+    /*position: relative;*/
+    /*left:50%;*/
+    /*top: 10px;*/
+    /*left: 10px;*/
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+    border-right:1px solid #bbb;
+}
+
+li:last-child {
+    border-right: none;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+
+.text{
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.select{
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.btn{
+    cursor: pointer;
+    outline: none;
+    text-decoration: none;
+    font: bold 16px 'Trebuchet MS',Arial, Helvetica;
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+    text-shadow: 0 1px 0 rgba(0,0,0,0.4);
+    border: 1px solid #cccccc;
+    -moz-box-shadow: 0 0 .05em rgba(0,0,0,0.4);
+    box-shadow: 0 0 0.05em rgba(0,0,0,0.4);
+    -webkit-box-shadow: 0 0 0.05em rgba(0,0,0,0.4);
+    -moz-border-radius: .3em;
+    border-radius: 3px;
+    border-top: 1px solid #fff;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    padding: 10px 20px;
+    background: #576270;
+    background: -webkit-gradient(linear, left top, left bottom, from(#cccccc), to(#6d6d6d) );
+    background: -moz-linear-gradient(-90deg, #4d5663, #748295);
+    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#576270', endColorstr='#748295');
+}
+
+.btn:first-child{
+    margin-right: 10px;
 }
 .form{
+    display: flex;
     background: #f9f9f9;
     border: 1px solid #cdcdcd;
     width: 420px;
-    height: 220px;
-    position: absolute;
-    top:50%;
-    left:50%;
-    margin:-150px 0 0 20px;
+    height: 190px;
+    margin: 0 auto;
+    /*position: absolute;*/
+    /*top:50%;*/
+    /*left:50%;*/
+    /*margin:-150px 0 0 20px;*/
     -webkit-box-shadow: 0 1px 0 #fff;
     border-radius: 3px;
+}
+
+form{
+    margin: auto;
 }
 .form_gdn{
     background: #f9f9f9;
     border: 1px solid #cdcdcd;
     width: 420px;
     height: 220px;
-    position: absolute;
-    top:50%;
-    left:50%;
-    margin:-150px 0 0 -421px;
+    /*position: absolute;*/
+    /*top:50%;*/
+    /*left:50%;*/
+    /*margin:-150px 0 0 -421px;*/
     -webkit-box-shadow: 0 1px 0 #fff;
     border-radius: 3px;
 }
@@ -61,6 +160,7 @@
     left:50%;
     z-index:2;
     margin:-10px 0 0 35px;
+    outline: none;
 }
 .cldb_gdn{
     width: 40px;
@@ -70,10 +170,12 @@
     left:50%;
     z-index:2;
     margin:-10px 0 0 -411px;
+    outline: none;
 }
 .del{
     position: relative;
-    left: 130px;
+    outline: none;
+    left: 110px;
     cursor: pointer;
     text-decoration: none;
     font: bold 16px 'Trebuchet MS',Arial, Helvetica;
@@ -112,6 +214,7 @@
 }
 .add {
     cursor: pointer;
+    outline: none;
     text-decoration: none;
     font: bold 16px 'Trebuchet MS',Arial, Helvetica;
     display: inline-block;
@@ -146,10 +249,7 @@
     background: -moz-linear-gradient(-90deg, #748295, #576270);
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#748295', endColorstr='#576270');
 }
-/*span{*/
-    /*font-size: 24px;*/
-    /*font-weight: bold;*/
-/*}*/
+
 .info{
     font-size: 20px;
     text-align: center;
@@ -159,5 +259,14 @@
 }
 strong{
     font-size: 24px;
+}
+
+footer {
+    /*margin-top: -100px;*/
+    flex: 0 0 auto;
+    height: 50px;
+    width: 100%;
+    margin: 0 auto;
+    border-top: 1px solid #cecece;
 }
 
