--- a/css/style.css
+++ b/css/style.css
@@ -93,14 +93,15 @@ li a:hover:not(.active) {
     border-top: 1px solid #fff;
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     padding: 10px 20px;
+    margin-right: 10px;
     background: #576270;
     background: -webkit-gradient(linear, left top, left bottom, from(#cccccc), to(#6d6d6d) );
     background: -moz-linear-gradient(-90deg, #4d5663, #748295);
     filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#576270', endColorstr='#748295');
 }
 
-.btn:first-child{
-    margin-right: 10px;
+.btn:last-child{
+    margin-right: 0;
 }
 .form{
     display: flex;
@@ -253,17 +254,37 @@ form{
 .info{
     font-size: 20px;
     text-align: center;
-    position: absolute;
-    top: 60%;
-    left: 45%;
+    position: relative;
+    top: 60px;
 }
+
+.text-info{
+    font-size: 20px;
+    text-align: center;
+    position: relative;
+    top: 20px;
+}
+
+.text-info-error{
+    font-size: 20px;
+    color: #9f352b;
+    text-align: center;
+    position: relative;
+    top: 20px;
+}
+
 strong{
     font-size: 24px;
 }
 
+.copyrite{
+    margin: auto;
+}
+
 footer {
-    /*margin-top: -100px;*/
+    display: flex;
     flex: 0 0 auto;
+    background-color: #eaeaea;
     height: 50px;
     width: 100%;
     margin: 0 auto;
